--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,42 +2,51 @@ version: '3.8'
 
 services:
   db_mysql:
-    image: mysql:latest
+    image: mysql:8.0
+    container_name: mysql_container
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: test
-      MYSQL_ROOT_HOST: root
+      MYSQL_ROOT_PASSWORD: "1234"
+      MYSQL_DATABASE: "test"
+      MYSQL_ROOT_HOST: "%"
     ports:
       - '3306:3306'
     volumes:
-      - 'C:/Users/breno/Documents/Docker/Volumes/DB/mysql:/var/lib/mysql'
+      - mysql_data:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    networks:
+      - backend
 
   rabbit_mq:
     image: rabbitmq:3-management
+    container_name: rabbitmq_container
     ports:
-      - '25672:25672' # (erlang) communication between the nodes and CLI tool
-      - '15672:15672' # communication with the web management API
-
-    volumes:
-      - /docker_conf/rabbitmq/data/:/var/lib/rabbitmq/
-
+      - '25672:25672'
+      - '15672:15672'
     environment:
-      - 'RABBITMQ_DEFAULT_USER = admin'
-      - 'RABBITMQ_DEFAULT_PASS = 1234'
-
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: 1234
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
     restart: always
+    networks:
+      - backend
 
   redis:
     image: redis:6.2-alpine
+    container_name: redis_container
     restart: unless-stopped
     ports:
       - '6379:6379'
     command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
     volumes:
       - redis_data:/data
+    networks:
+      - backend
 
   mongodb:
     image: mongo:latest
+    container_name: mongodb_container
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: 1234
@@ -45,14 +54,36 @@ services:
       - '27017:27017'
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - backend
+
+  kafka:
+    image: bitnami/kafka:3.6
+    container_name: kafka_container
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_CFG_NODE_ID: 0
+      KAFKA_CFG_PROCESS_ROLES: broker,controller
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 0@kafka:9093
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_KRAFT_CLUSTER_ID: xJSAUCkQTEmyCJZ9MXUWyA  # UUID fixo, pode gerar outro se quiser
+    volumes:
+      - kafka_data:/bitnami/kafka
+    networks:
+      - backend
+    restart: unless-stopped
+
+networks:
+  backend:
+    driver: bridge
 
 volumes:
+  mysql_data:
   redis_data:
-    driver: local
-
-  logs-folder:
-    name: log_rabbitmq
-    driver: local
-
+  rabbitmq_data:
   mongodb_data:
-    driver: local
+  kafka_data:
